# assistants_app

./: .gitignore  .taurignore  README.md  app.key  app.key.pub  assistant.key  assistant.key.pub  eslint.config.cjs  eslint.config.js  latest.md  package.json  pnpm-lock.yaml  release.md  run.pid  tailwind.config.js  tp.py  vite.config.ts
.github/workflows/: publish.yml
public/locales/en-US/: common.json  updater.json
public/locales/zh-CN/: common.json  updater.json
public/locals/cn/: accessory.json  system.json
public/locals/en/: translation.json
release/: Cargo.toml  README.md
release/src/: main.rs  utils.rs
scripts/: update.mjs
src/: App.tsx  index.css  main.tsx  renderer.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/permissions/commands/: default.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: debug.rs  mod.rs  request.rs  system.rs  tools.rs
src-tauri/src/commands/arm_service/: connection.rs  csv_exporter.rs  mod.rs  parser.rs  robot_client.rs  robot_data.rs  structs.rs  ws_get.rs
src-tauri/src/desktops/: tray.rs  window.rs
src-tauri/src/state/: app_state.rs  mod.rs  threads.rs
src-tauri/src/utils/: mod.rs  process_manage.rs  response.rs  system.rs  user_data.rs
src/assets/fonts/: index.css
src/assets/icons/: iconfont.css  iconfont.js  iconfont.json
src/assets/locales/en-US/: common.json
src/assets/locales/zh-CN/: common.json
src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  empty.tsx  input.tsx  label.tsx  popover.tsx  select.tsx  sonner.tsx  spinning.tsx  switch.tsx
src/components/updater/: DownloadProgress.tsx  LogicUpdater.tsx  ReleaseDescDialog.tsx  ServiceUpdater.tsx  useUpdater.ts
src/hooks/: system.ts  tauri.ts  useDragDrop.ts
src/lib/: constant.ts  i18n.ts  storage.ts  tools.ts  utils.ts
src/lib/worker/: index.ts  joint_chart.worker.ts
src/pages/Home/: Chartr.tsx  Nav.tsx  index.tsx  options.ts
src/pages/Home/Chart/: JointChart.tsx  config.ts  index.tsx
src/pages/Home/FilterCriteria/: index.tsx  useOptions.tsx
src/pages/Layouts/: Container.tsx  Dialog.tsx
src/pages/Layouts/ArmControl/: index.tsx  navbar.tsx
src/pages/Layouts/Message/: index.tsx
src/pages/Layouts/SocketState/: StartServerDialog.tsx  StateDialog.tsx  index.tsx  ws.ts
src/pages/Observer/: Nav.tsx  Version.tsx  index.tsx  options.ts
src/pages/Observer/Chart/: JointChart.tsx  config.ts  index.tsx
src/pages/Observer/FilterCriteria/: Download.tsx  ObserverSwitch.tsx  SelectField.tsx  index.tsx  useOptions.tsx
src/pages/Updater/: DownloadProgress.tsx  LogicUpdater.tsx  ReleaseDescDialog.tsx
src/pages/components/both_button/: index.tsx
src/pages/components/empty/: index.tsx
src/pages/components/loading/: index.tsx
src/pages/components/modal/: confirm.tsx  index.tsx
src/pages/components/switch_button/: index.tsx
src/pages/components/tabs/: index.tsx
src/pages/components/terminal/: index.tsx  terminal.ts
src/pages/components/theme/: ThemeSwitcher.tsx
src/router/: index.tsx  routes.tsx
src/store/: index.ts
src/store/common/: apis.ts
src/store/features/: app.ts  arm.ts  assistants.ts  log.ts  updater.ts  ws.ts
src/utils/: response.rs
~/.tauri/: myapp.key  myapp.key.pub
