[package]
name = "UFACTORY调参工具"
version = "1.0.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xarm_assistants_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "*"
log = "0.4"
semver = "1.0"
regex = "1.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.4.3"
csv = "1.1.6"
bytes = "1"
thiserror = "1"
pyo3 = { version = "0.21", features = ["auto-initialize"] }
anyhow = "1"
once_cell = "1.18"

tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
