[package]
name = "UFACTORY_Assistant"
version = "1.1.4"
description = "UFACTORY Assistant, The official assistant for UFACTORY robots."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xarm_assistants_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.4.3"
csv = "1.1.6"

tokio = { version = "1.0", features = ["time"] } # 异步运行时
tokio-tungstenite = "0.20.0"                     # WebSocket 客户端
url = "2.0"                                      # URL 解析
once_cell = "1.18"


tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
